--- a/src/app/pages/components/navbar/navbar.component.scss
+++ b/src/app/pages/components/navbar/navbar.component.scss
@@ -12,7 +12,8 @@
 }
 
 .navbar__brand {
-  width: 3em;
+  width: 1em;
+  height: 5vh;
   cursor: pointer;
 }
 
@@ -40,5 +41,8 @@
   }
   .navbar__navigation {
     right: 40%;
+  }
+  .navbar__brand {
+    width: 1.5em;
   }
 }
