--- a/src/app/pages/item-detail/item-detail.component.scss
+++ b/src/app/pages/item-detail/item-detail.component.scss
@@ -22,18 +22,18 @@
   font-size: 24px;
   font-family: $font-Roboto-Condensed-Regular;
   width: 80vw;
-  margin-top: 2em;
+  margin-top: 1.5em;
 }
 
 .detail__title {
   font-size: 48px;
   font-family: $font-Roboto-Condensed-Bold;
-  margin: 0.5em 0 0;
+  margin: 0.5em 0 0.5em;
   text-transform: uppercase;
 }
 
 .detail__photo {
-  width: 30vw;
+  width: 30%;
 }
 
 .detail__description {
@@ -44,18 +44,16 @@
   align-items: center;
   font-size: 32px;
   padding: 2em;
+  width: 70%;
 }
 
 .detail__divisor {
-  margin: 0.5em auto;
+  margin: 1em auto;
   width: 80vw;
   content: "";
   font-size: 24px;
   height: 0.2em;
   background-color: $marvel-red;
-}
-
-.detail__subitems1 {
 }
 
 @include screen-small {
