--- a/src/app/pages/comics/comics.component.html
+++ b/src/app/pages/comics/comics.component.html
@@ -1,1 +1,40 @@
-<p>comics works!</p>
+<div class="items-master">
+
+    <form class="items-master__filters" [formGroup]="filtersForm">
+        <div class="items-master__filters-input comics-filter">
+            <app-input [fControl]="filtersForm.controls.titleStartsWith" [placeHolder]="'Filter by title'" [label]="''"
+                [previewResults]="[]">
+            </app-input>
+        </div>
+        <div class="items-master__filters-input comics-filter">
+            <app-input [fControl]="filtersForm.controls.issueNumber" [placeHolder]="'Filter by issue number'"
+                [label]="''" [previewResults]="[]">
+            </app-input>
+        </div>
+        <div class="items-master__filters-input comics-filter">
+            <app-input [fControl]="filtersForm.controls.orderBy" [placeHolder]="'Order by issue number'" [label]="''"
+                [readonly]="true" [previewResults]="orderByVariables" (touched)="touchedOrderBy()"
+                (itemSelected)="updateOrderByFilter($event)">
+            </app-input>
+        </div>
+        <div class="items-master__filters-input comics-filter">
+            <app-input [fControl]="filtersForm.controls.format" [placeHolder]="'Filter by format'" [label]="''"
+                [readonly]="true" [previewResults]="formatsAviable" (touched)="touchedFormat()"
+                (itemSelected)="updateFilterByFormat($event)">
+            </app-input>
+        </div>
+    </form>
+
+    <div class="divisor"></div>
+    <div class="card__grid" infiniteScroll [infiniteScrollDistance]="1" [infiniteScrollThrottle]="50"
+        (scrolled)="onScrollDown()">
+        <app-thubnail-item *ngFor="let comic of comicssToDisplay"
+            [imgUrl]="getImgUrl(comic.thumbnail.path, 'portrait_xlarge', comic.thumbnail.extension)" [type]="'comic'"
+            [name]="comic.title" [itemId]="comic.id">
+        </app-thubnail-item>
+    </div>
+    <div *ngIf="loading"
+        [class]="comicssToDisplay.length > 0 ? 'items-master__loading new-page' : 'items-master__loading'">
+        <app-loading></app-loading>
+    </div>
+</div>
