--- a/src/app/pages/character-detail/character-detail.component.html
+++ b/src/app/pages/character-detail/character-detail.component.html
@@ -9,7 +9,7 @@
                 [src]="getImgUrl(character.thumbnail.path, 'portrait_incredible', character.thumbnail.extension)"
                 alt="Character" title="Character" />
             <div class="detail__description">{{character.description.length>0 ? character.description :
-                'No description aviable'}}</div>
+                'No description available'}}</div>
         </div>
         <div class="detail__divisor"></div>
         <div class="detail__picker">
@@ -19,7 +19,7 @@
                 (click)="switchSelector = !switchSelector">STORIES</h1>
         </div>
         <ng-container *ngIf="switchSelector">
-            <div class="card__grid detail-items">
+            <div class="card__grid detail-items" *ngIf="comics.length > 0">
                 <app-thubnail-item *ngFor="let item of comics"
                     [imgUrl]="getImgUrl(item.thumbnail.path, 'portrait_xlarge', item.thumbnail.extension)"
                     [type]="'comic'" [name]="item.title" [itemId]="item.id">
@@ -33,10 +33,15 @@
                     <app-loading></app-loading>
                 </div>
             </div>
+            <div class="empty-result" *ngIf="comics.length == 0 && !comicsLoading">
+                <img alt="Empty results" title="Empty results" src="/assets/empty.svg" class="empty-result__image">
+                <h1>No results</h1>
+            </div>
         </ng-container>
         <ng-container *ngIf="!switchSelector">
-            <div class="card__grid detail-items">
+            <div class="card__grid detail-items" *ngIf="stories.length > 0">
                 <app-thubnail-item *ngFor="let item of stories" [type]="'storie'" [name]="item.title"
+                    [imgUrl]="getImgUrl(item?.thumbnail?.path, 'portrait_xlarge', item?.thumbnail?.extension)"
                     [itemId]="item.id">
                 </app-thubnail-item>
                 <button (click)="getStories(itemId, null, storiesOffset)"
@@ -47,6 +52,10 @@
                     *ngIf="storiesLoading">
                     <app-loading></app-loading>
                 </div>
+            </div>
+            <div class="empty-result" *ngIf="stories.length == 0 && !storiesLoading">
+                <img alt="Empty results" title="Empty results" src="/assets/empty.svg" class="empty-result__image">
+                <h1>No results</h1>
             </div>
         </ng-container>
     </ng-container>
