--- a/src/app/pages/comic-detail/comic-detail.component.html
+++ b/src/app/pages/comic-detail/comic-detail.component.html
@@ -4,12 +4,13 @@
     </div>
     <ng-container *ngIf="!loading">
         <h1 class="detail__title">{{comic.title}}</h1>
+        <h1 class="detail__title subtitle">Pages: {{comic.pageCount}}</h1>
         <div class="detail__intro">
             <img class="detail__photo"
                 [src]="getImgUrl(comic.thumbnail.path, 'portrait_incredible', comic.thumbnail.extension)"
                 alt="Character" title="Character" />
             <div class="detail__description">{{comic.description && comic.description.length > 0 ? comic.description :
-                'No description aviable'}}</div>
+                'No description available'}}</div>
         </div>
         <div class="detail__divisor"></div>
         <div class="detail__picker">
@@ -19,7 +20,7 @@
                 (click)="switchSelector = !switchSelector">STORIES</h1>
         </div>
         <ng-container *ngIf="switchSelector">
-            <div class="card__grid detail-items">
+            <div class="card__grid detail-items" *ngIf="characters.length > 0">
                 <app-thubnail-item *ngFor="let item of characters"
                     [imgUrl]="getImgUrl(item.thumbnail.path, 'portrait_xlarge', item.thumbnail.extension)"
                     [type]="'character'" [name]="item.name" [itemId]="item.id">
@@ -33,10 +34,15 @@
                     <app-loading></app-loading>
                 </div>
             </div>
+            <div class="empty-result" *ngIf="characters.length == 0 && !charactersLoading">
+                <img alt="Empty results" title="Empty results" src="/assets/empty.svg" class="empty-result__image">
+                <h1>No results</h1>
+            </div>
         </ng-container>
         <ng-container *ngIf="!switchSelector">
-            <div class="card__grid detail-items">
+            <div class="card__grid detail-items" *ngIf="stories.length > 0">
                 <app-thubnail-item *ngFor="let item of stories" [type]="'storie'" [name]="item.title"
+                    [imgUrl]="getImgUrl(item?.thumbnail?.path, 'portrait_xlarge', item?.thumbnail?.extension)"
                     [itemId]="item.id">
                 </app-thubnail-item>
                 <button (click)="getStories(itemId, storiesOffset)"
@@ -47,6 +53,10 @@
                     *ngIf="storiesLoading">
                     <app-loading></app-loading>
                 </div>
+            </div>
+            <div class="empty-result" *ngIf="stories.length == 0 && !storiesLoading">
+                <img alt="Empty results" title="Empty results" src="/assets/empty.svg" class="empty-result__image">
+                <h1>No results</h1>
             </div>
         </ng-container>
     </ng-container>
