--- a/src/app/pages/components/thubnail-item/thubnail-item.component.scss
+++ b/src/app/pages/components/thubnail-item/thubnail-item.component.scss
@@ -2,7 +2,7 @@
 @import "__tools-dir";
 
 .card {
-  font-size: 24px;
+  font-size: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,9 +35,24 @@
   cursor: pointer;
 }
 
+.card__image {
+  width: 168px;
+  height: 252px;
+  object-fit: cover;
+}
+
 @include screen-small {
   .card {
-    font-size: 18px;
+    font-size: 16px;
     padding: 0;
+  }
+
+  .card__image {
+    width: 100px;
+    height: 150px;
+  }
+
+  .card {
+    width: 120px;
   }
 }
