--- a/src/app/pages/stories/stories.component.html
+++ b/src/app/pages/stories/stories.component.html
@@ -1,1 +1,13 @@
-<p>stories works!</p>
+<div class="items-master">
+    <div class="card__grid" infiniteScroll [infiniteScrollDistance]="1" [infiniteScrollThrottle]="50"
+        (scrolled)="onScrollDown()">
+        <app-thubnail-item *ngFor="let storie of storiesToDisplay"
+            [imgUrl]="getImgUrl(storie?.thumbnail?.path, 'portrait_xlarge', storie?.thumbnail?.extension)"
+            [type]="'storie'" [name]="storie.title" [itemId]="storie.id">
+        </app-thubnail-item>
+    </div>
+    <div *ngIf="loading"
+        [class]="storiesToDisplay.length > 0 ? 'items-master__loading new-page' : 'items-master__loading'">
+        <app-loading></app-loading>
+    </div>
+</div>
