--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -127,6 +127,9 @@ button {
   font-family: $font-Roboto-Condensed-Bold;
   margin: 0.5em 0 0.5em;
   text-transform: uppercase;
+  &.subtitle {
+    font-size: 32px;
+  }
   &.selector {
     font-size: 32px;
     margin: 0 0.2em;
@@ -165,13 +168,29 @@ button {
   background-color: $marvel-red;
 }
 
+.empty-result {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: $font-Roboto-Condensed-Bold;
+  color: $marvel-red;
+  font-size: 18px;
+  height: 40vh;
+  .empty-result__image {
+    width: 10vw;
+    margin-top: 5vh;
+  }
+}
+
 @include screen-small {
   .card__grid {
     font-size: 16px;
     grid-template-columns: 1fr 1fr;
     padding: 0;
     width: 80%;
-    margin: 0;
+    margin: 1em auto;
   }
   button {
     font-size: 18px;
@@ -218,5 +237,8 @@ button {
   }
   .detail__title {
     font-size: 24px;
+    &.subtitle {
+      font-size: 20px;
+    }
   }
 }
