--- a/src/app/pages/characters/characters.component.html
+++ b/src/app/pages/characters/characters.component.html
@@ -34,7 +34,7 @@
     </div>
     <div class="empty-result" *ngIf="charactersToDisplay.length == 0 && !loading">
         <img alt="Empty results" title="Empty results" src="/assets/empty.svg" class="empty-result__image">
-        <h1>No results</h1>
+        <h1 class="empty-result__text">No results</h1>
     </div>
     <div *ngIf="loading"
         [class]="charactersToDisplay.length > 0 ? 'items-master__loading new-page' : 'items-master__loading'">
