--- a/src/app/pages/comic-detail/comic-detail.component.html
+++ b/src/app/pages/comic-detail/comic-detail.component.html
@@ -36,7 +36,7 @@
             </div>
             <div class="empty-result" *ngIf="characters.length == 0 && !charactersLoading">
                 <img alt="Empty results" title="Empty results" src="/assets/empty.svg" class="empty-result__image">
-                <h1>No results</h1>
+                <h1 class="empty-result__text">No results</h1>
             </div>
         </ng-container>
         <ng-container *ngIf="!switchSelector">
@@ -56,7 +56,7 @@
             </div>
             <div class="empty-result" *ngIf="stories.length == 0 && !storiesLoading">
                 <img alt="Empty results" title="Empty results" src="/assets/empty.svg" class="empty-result__image">
-                <h1>No results</h1>
+                <h1 class="empty-result__text">No results</h1>
             </div>
         </ng-container>
     </ng-container>
