--- a/src/app/pages/storie-detail/storie-detail.component.html
+++ b/src/app/pages/storie-detail/storie-detail.component.html
@@ -37,7 +37,7 @@
             </div>
             <div class="empty-result" *ngIf="characters.length == 0 && !charactersLoading">
                 <img alt="Empty results" title="Empty results" src="/assets/empty.svg" class="empty-result__image">
-                <h1>No results</h1>
+                <h1 class="empty-result__text">No results</h1>
             </div>
         </ng-container>
         <ng-container *ngIf="!switchSelector">
@@ -57,7 +57,7 @@
             </div>
             <div class="empty-result" *ngIf="comics.length == 0 && !comicsLoading">
                 <img alt="Empty results" title="Empty results" src="/assets/empty.svg" class="empty-result__image">
-                <h1>No results</h1>
+                <h1 class="empty-result__text">No results</h1>
             </div>
         </ng-container>
     </ng-container>
