--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -241,4 +241,10 @@ button {
       font-size: 20px;
     }
   }
+
+  .empty-result {
+    .empty-result__text {
+      font-size: 24px;
+    }
+  }
 }
