--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -107,6 +107,33 @@ button {
   }
 }
 
+.detail__title {
+  font-size: 48px;
+  font-family: $font-Roboto-Condensed-Bold;
+  margin: 0.5em 0 0.5em;
+  text-transform: uppercase;
+  &.subtitle {
+    font-size: 32px;
+  }
+  &.selector {
+    font-size: 32px;
+    margin: 0 0.2em;
+    cursor: pointer;
+  }
+  &.selected {
+    font-size: 32px;
+    margin: 0 0.2em;
+    cursor: pointer;
+    text-decoration: underline;
+    color: $marvel-red;
+  }
+}
+
+.detail__picker {
+  display: flex;
+  width: 80vw;
+}
+
 @include screen-small {
   .card__grid {
     font-size: 16px;
@@ -145,6 +172,13 @@ button {
   .empty-result {
     .empty-result__text {
       font-size: 24px;
+    }
+  }
+
+  .detail__title {
+    font-size: 24px;
+    &.subtitle {
+      font-size: 20px;
     }
   }
 }
