--- a/src/app/pages/items-master/items-master.component.html
+++ b/src/app/pages/items-master/items-master.component.html
@@ -1,17 +1,134 @@
 <div class="items-master">
-    <div class="card__grid" infiniteScroll [infiniteScrollDistance]="1" [infiniteScrollThrottle]="50"
-        (scrolled)="onScrollDown()">
-        <app-thubnail-item *ngFor="let item of itemsToDisplay"
-            [imgUrl]="getImgUrl(item?.thumbnail?.path, 'portrait_xlarge', item?.thumbnail?.extension)" [type]="'storie'"
-            [name]="item.title" [itemId]="item.id">
-        </app-thubnail-item>
-    </div>
-    <div class="empty-result" *ngIf="itemsToDisplay.length == 0 && !loading">
-        <img alt="Empty results" title="Empty results" src="/assets/empty.svg" class="empty-result__image">
-        <h1 class="empty-result__text">No saved stories</h1>
-    </div>
-    <div *ngIf="loading"
-        [class]="itemsToDisplay.length > 0 ? 'items-master__loading new-page' : 'items-master__loading'">
-        <app-loading></app-loading>
-    </div>
+  <ng-container [ngSwitch]="actualSelection">
+    <ng-container *ngSwitchCase="posibleSelections[0]">
+      <form class="items-master__filters" [formGroup]="filtersForm">
+        <div class="items-master__filters-input comics-filter">
+          <app-input
+            [fControl]="filtersForm.controls.titleStartsWith"
+            [placeHolder]="'Filter by title'"
+            [label]="''"
+            [previewResults]="[]"
+          >
+          </app-input>
+        </div>
+        <div class="items-master__filters-input comics-filter">
+          <app-input
+            [fControl]="filtersForm.controls.issueNumber"
+            [placeHolder]="'Filter by issue number'"
+            [label]="''"
+            [previewResults]="[]"
+          >
+          </app-input>
+        </div>
+        <div class="items-master__filters-input comics-filter">
+          <app-input
+            [fControl]="filtersForm.controls.orderBy"
+            [placeHolder]="'Order by issue number'"
+            [label]="''"
+            [readonly]="true"
+            [previewResults]="orderByVariables"
+            (touched)="touchedOrderBy()"
+            (itemSelected)="updateOrderByFilter($event)"
+          >
+          </app-input>
+        </div>
+        <div class="items-master__filters-input comics-filter">
+          <app-input
+            [fControl]="filtersForm.controls.format"
+            [placeHolder]="'Filter by format'"
+            [label]="''"
+            [readonly]="true"
+            [previewResults]="formatsAviable"
+            (touched)="touchedFormat()"
+            (itemSelected)="updateFilterByFormat($event)"
+          >
+          </app-input>
+        </div>
+      </form>
+    </ng-container>
+    <ng-container *ngSwitchCase="posibleSelections[1]">
+      <form class="items-master__filters" [formGroup]="filtersForm">
+        <div class="items-master__filters-input">
+          <app-input
+            [fControl]="filtersForm.controls.nameStartsWith"
+            [placeHolder]="'Filter by name'"
+            [label]="''"
+            [previewResults]="[]"
+          >
+          </app-input>
+        </div>
+        <div class="items-master__filters-input">
+          <app-input
+            [fControl]="filtersForm.controls.comics"
+            [placeHolder]="'Filter by comics'"
+            [label]="''"
+            [previewResults]="previewComics"
+            (itemSelected)="updateComicFilter($event)"
+          >
+          </app-input>
+        </div>
+        <!-- DISABLED DUE ENDPOINT MISSING FILTER BY TITLE 
+            <div class="items-master__filters-input">
+            <app-input [fControl]="filtersForm.controls.nameStartsWith" [placeHolder]="'Filter by name'" [label]="''"
+                [previewResults]="[]">
+            </app-input>
+        </div> -->
+        <div class="items-master__filters-input">
+          <app-input
+            [fControl]="filtersForm.controls.orderBy"
+            [placeHolder]="'Order by'"
+            [label]="''"
+            [readonly]="true"
+            [previewResults]="orderByVariables"
+            (touched)="touchedOrderBy()"
+            (itemSelected)="updateOrderByFilter($event)"
+          >
+          </app-input>
+        </div>
+      </form>
+    </ng-container>
+    <ng-container *ngSwitchCase="posibleSelections[2]"> </ng-container>
+  </ng-container>
+  <div class="divisor" *ngIf="actualSelection !== posibleSelections[2]"></div>
+  <div
+    class="card__grid"
+    infiniteScroll
+    [infiniteScrollDistance]="1"
+    [infiniteScrollThrottle]="50"
+    (scrolled)="onScrollDown()"
+  >
+    <app-thubnail-item
+      *ngFor="let item of itemsToDisplay"
+      [imgUrl]="
+        getImgUrl(
+          item?.thumbnail?.path,
+          'portrait_xlarge',
+          item?.thumbnail?.extension
+        )
+      "
+      [type]="getItemType()"
+      [name]="item.title"
+      [itemId]="item.id"
+    >
+    </app-thubnail-item>
+  </div>
+  <div class="empty-result" *ngIf="itemsToDisplay.length == 0 && !loading">
+    <img
+      alt="Empty results"
+      title="Empty results"
+      src="/assets/empty.svg"
+      class="empty-result__image"
+    />
+    <h1 class="empty-result__text">No saved stories</h1>
+  </div>
+  <div
+    *ngIf="loading"
+    [class]="
+      itemsToDisplay.length > 0
+        ? 'items-master__loading new-page'
+        : 'items-master__loading'
+    "
+  >
+    <app-loading></app-loading>
+  </div>
 </div>
