Console log cleaning

--- a/src/app/pages/components/thubnail-item/thubnail-item.component.scss
+++ b/src/app/pages/components/thubnail-item/thubnail-item.component.scss
@@ -8,7 +8,7 @@
   align-items: center;
   justify-content: center;
   background-color: lighten($background-dark-grey, 70);
-  padding: 0.7em 0;
+  padding: 0.7em 0.5em;
   color: $background-dark;
   border-radius: 5px;
   border: 2px solid $background-dark;
