--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -49,6 +49,11 @@ button {
   font-family: $font-Roboto-Condensed-Bold;
   font-size: 24px;
   padding: 0.25em 0.5em;
+  border: none;
+  transition: all 0.3s ease-in-out;
+  &:active {
+    background-color: $background-dark-grey;
+  }
 }
 
 // CARDS MASTER //
